[package]
name = "zephyr-upkeep"
version = "0.1.0"
edition = "2021"

[dependencies]
zephyr-sdk = { version = "0.2.2-rc4" }
stellar-strkey = { version = "0.0.8" }
urlencoding = "2.1.3"
serde = { version = "1", features = ["derive"] }
hex = "0.4.3"
dotenv_codegen = "0.15.0"
dotenv = "0.15.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
